Add min & max temparature APIs for given region & Rename to Creators from generators
